Allow setting a selection condition for the entry chooser in settings

--- a/src/templates/_settings-general.twig
+++ b/src/templates/_settings-general.twig
@@ -16,6 +16,8 @@
   value: settings.defaultText
 }) }}
 
+{{ (selectionCondition ?? false) ? selectionCondition|raw }}
+
 {{ forms.checkboxField({
   label: 'Allow custom link text'|t('cta'),
   name: 'allowCustomText',
